--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         
         <!-- <img class="footer-img" src="src/footerachal.PNG" alt="" /> -->
           <h1 class="footer-intro">Feel free to contact me!</h1>
-          <h4 class="footer-paragraph">I would love to talk in detail about any web-development roles or any open entry-level opporunity, so feel free to reach out. Thank you for checking out the website and I hope to be in contact! </h4>
+          <h4 class="footer-paragraph">I would love to talk in detail about any web-development roles or any open entry-level opportunity, so feel free to reach out. Thank you for checking out the website and I hope to be in contact! </h4>
           
       </div>
       <div class="footer-socials-container">
