--- a/index.html
+++ b/index.html
@@ -191,8 +191,7 @@
       <div class="about-text-container">
         <h2 class="about-header">About me</h2>
         <p class="about-paragraph" style="font-size: 13px; text-align:justify;">
-          I am currently a sophomore at Rutgers Business School pursuing a degree in BAIT and Computer Science. I have always been someone who has been very interested in learning about business and what insights can be made to use foresight and make improved analytical decisions. Computer Science was something that I never expected to be pursuing and enjoying. One of the core reasons I chose it as a major was because of how much enthusiasm my dad showed when teaching me concepts and languages like C and SQL. Since I am an only child, my dad has felt like my dad and my brother to me. Being someone I look up to and consistently compete with, some of my passion for Computer Science definitely comes from my drive to push past my dad. The languages I am well adapted to are C, Java, Python, HTML/CSS, and SQL. My current goal is to gather more entry-level experience in these areas through career opportunities. Some other things I enjoy doing are playing basketball, watching the New York Jets, learning about cars and facing unforeseen challenges.
-        </p>
+          I am currently a senior at Rutgers Business School, pursuing a degree in Business Analytics and Information Technology (BAIT) and Computer Science. My passion for business stems from a deep interest in leveraging insights to enhance analytical decision-making. Unexpectedly, I also developed a love for Computer Science, greatly influenced by my dad's enthusiasm while teaching me programming concepts and languages like C and SQL. As an only child, my dad has been both a father and a brother to me, fostering a competitive spirit that drives my passion for Computer Science. I am proficient in C, Java, Python, HTML/CSS, and SQL, and I am actively seeking entry-level opportunities to gain practical experience in these areas. Other things I enjoy doing are, playing basketball, rooting for the New York Jets, learning about cars, and spending quality time with my family. Feel free to check out my resume for a more detailed overview of my experiences and skills!
       </div>
       
 
@@ -216,7 +215,7 @@
           <a href="src/Achalresume.pdf" class="resume" target="_blank">
             <img class="resume-img" src="src/resume.png" alt="Check out my resume!" />
           </a>
-          <a href="https://www.instagram.com/_achalm/" class="instagram" target="_blank">
+          <a href="https://www.instagram.com/achalmukkapati/" class="instagram" target="_blank">
             <img class="insta-img" src="src/instagram.png" alt="" />
           </a>
           <a href="http://www.linkedin.com/in/achal-mukkapati" class="instagram" target="_blank">
