--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
       
       <div class="about-text-container">
-        <h2 class="about-header">About me</h2>
+        <h2 class="about-header">About me!</h2>
         <p class="about-paragraph" style="font-size: 12px; text-align:justify;">
             As a student at Rutgers Business School, majoring in Computer Science and Business Analytics and Information Technology (BAIT), I’ve developed a deep appreciation for the intersection of technology and business. My passion for leveraging data to drive analytical decision-making is rooted in the many lessons my dad shared with me. As an only child, my dad has been both a mentor and a friend, instilling in me a competitive spirit and a relentless drive to excel in whatever I choose to do. His enthusiasm for programming sparked my own, as he introduced me to Java and SQL, fueling my desire to delve deeper into the world of Computer Science.
 I’ve had the opportunity to work on projects that bridge the gap between theory and real-world application. At People Tech Group, I played a crucial role in automating infrastructure as code (IaC) generation using Amazon Bedrock and AWS CloudFormation, significantly reducing manual configuration time. This experience not only honed my technical skills in AI and cloud services but also deepened my understanding of how technology can streamline complex business processes. Similarly, my internship at KBC Bank allowed me to optimize SQL queries and automate system processes, reinforcing my commitment to efficiency and precision in every task I undertake.
