--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Outside of my professional pursuits, I enjoy playing basketball, cheering for th
         
         <!-- <img class="footer-img" src="src/footerachal.PNG" alt="" /> -->
           <h1 class="footer-intro">Feel free to contact me!</h1>
-          <h4 class="footer-paragraph">I would love to talk in detail about any Solution Architect roles or any open Software opportunities, so feel free to reach out. Thank you for checking out my website and I hope to be in contact! </h4>
+          <h4 class="footer-paragraph">I would love to discuss any Solution Architect roles or Software opportunities in more detail, so feel free to reach out. Thank you for visiting my website, and I look forward to being in contact! </h4>
           
       </div>
       <div class="footer-socials-container">
