--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <p class="accent-text">.</p>
           </h1>
           <p class="header-about">
-            Aspiring Software Engineer. Student at Rutgers University - New
-            Brunswick, double majoring in Computer Science and Business Analytics &
-            Information Technology.
+           Aspiring Software Engineer. AI Graduate Student at Northeastern University,
+            with a dual Bachelor's in Computer Science and Business Analytics(BAIT) from Rutgers University.
+            Passionate about building scalable systems and driving data-driven innovation.
           </p>
           <a href="#experiences">
             <button class="learn-more-button styled-button">Learn more</button>
@@ -210,7 +210,7 @@ Outside of my professional pursuits, I enjoy playing basketball, cheering for th
         
         <!-- <img class="footer-img" src="src/footerachal.PNG" alt="" /> -->
           <h1 class="footer-intro">Feel free to contact me!</h1>
-          <h4 class="footer-paragraph">I would love to discuss any Solution Architect roles or Software opportunities in more detail, so feel free to reach out. Thank you for visiting my website, and I look forward to being in contact! </h4>
+          <h4 class="footer-paragraph">I would love to discuss any Artficial Intelligence or Software opportunities in more detail, so feel free to reach out. Thank you for visiting my website, and I look forward to hearing from you! </h4>
           
       </div>
       <div class="footer-socials-container">
