--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <p class="accent-text">.</p>
           </h1>
           <p class="header-about">
-           Aspiring Software Engineer. AI Graduate Student at Northeastern University,
-            with a dual Bachelor's in Computer Science and Business Analytics(BAIT) from Rutgers University.
+           Aspiring Software Engineer. AI Graduate Student at Northeastern University.
             Passionate about building scalable systems and driving data-driven innovation.
+            <!--  ,with a dual Bachelor's in Computer Science and Business Analytics(BAIT) from Rutgers University.-->
           </p>
           <a href="#experiences">
             <button class="learn-more-button styled-button">Learn more</button>
@@ -191,7 +191,7 @@
       <div class="about-text-container">
         <h2 class="about-header">About me!</h2>
         <p class="about-paragraph" style="font-size: 12px; text-align:justify;">
-            As a student at Rutgers Business School, majoring in Computer Science and Business Analytics and Information Technology (BAIT), I’ve developed a deep appreciation for the intersection of technology and business. My passion for leveraging data to drive analytical decision-making is rooted in the many lessons my dad shared with me. As an only child, my dad has been both a mentor and a friend, instilling in me a competitive spirit and a relentless drive to excel in whatever I choose to do. His enthusiasm for programming sparked my own, as he introduced me to Java and SQL, fueling my desire to delve deeper into the world of Computer Science.
+            My name is Achal(Uh-ch-uhl) and I’m currently pursuing a Master’s in Artificial Intelligence at Northeastern University. I graduated from Rutgers Business School with a double major in Computer Science and Business Analytics and Information Technology (BAIT), where I developed a deep appreciation for the intersection of technology and business. My passion for leveraging data to drive analytical decision-making is rooted in the many lessons my dad shared with me. As an only child, my dad has been both a mentor and a friend, instilling in me a competitive spirit and a relentless drive to excel in whatever I choose to do. His enthusiasm for programming sparked my own, as he introduced me to Java and SQL, fueling my desire to delve deeper into the world of Computer Science.
 I’ve had the opportunity to work on projects that bridge the gap between theory and real-world application. At People Tech Group, I played a crucial role in automating infrastructure as code (IaC) generation using Amazon Bedrock and AWS CloudFormation, significantly reducing manual configuration time. This experience not only honed my technical skills in AI and cloud services but also deepened my understanding of how technology can streamline complex business processes. Similarly, my internship at KBC Bank allowed me to optimize SQL queries and automate system processes, reinforcing my commitment to efficiency and precision in every task I undertake.
 My projects reflect my passion for solving real-world problems through technology. Whether it’s developing AI-driven solutions for auto insurance underwriting or creating secure, role-based access control systems for sensitive data, I am driven by the desire to make a meaningful impact.
 Outside of my professional pursuits, I enjoy playing basketball, cheering for the New York Jets, hiking, learning about cars, and spending quality time with my family. My journey is one of continuous learning, and I look forward to the opportunities ahead. Feel free to explore my resume for a detailed overview of my experiences and skills!
