--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
             <p class="accent-text">.</p>
           </h1>
           <p class="header-about">
-           Aspiring Software Engineer. AI Graduate Student at Northeastern University.
-            Passionate about building scalable systems and driving data-driven innovation.
+           Aspiring Software Engineer. 
+           AI Grad Student @ Northeastern.
+           Passionate about innovation.
             <!--  ,with a dual Bachelor's in Computer Science and Business Analytics(BAIT) from Rutgers University.-->
           </p>
           <a href="#experiences">
