--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
             <p class="accent-text">.</p>
           </h1>
           <p class="header-about">
-           Aspiring Software Engineer.       
-           AI Grad Student @ Northeastern University.
-           Passionate about innovation.
+           Aspiring Software Engineer. AI Graduate Student @ Northeastern University.
+            Dynamic solution seeker.
             <!--  ,with a dual Bachelor's in Computer Science and Business Analytics(BAIT) from Rutgers University.-->
           </p>
           <a href="#experiences">
