--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </h1>
           <p class="header-about">
            Aspiring Software Engineer. AI Graduate Student @ Northeastern University.
-            Dynamic solution seeker.
+            Passionate solution seeker.
             <!--  ,with a dual Bachelor's in Computer Science and Business Analytics(BAIT) from Rutgers University.-->
           </p>
           <a href="#experiences">
